--- a/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
@@ -41,7 +41,7 @@
         <input type="text" name="OPERATION_REMARKS_%2" id="OPERATION_REMARKS_%2" value="%8" class="form-control input-sm" />
     </td>
     <td>
-        <a href="" class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
     </td>
     <td>
         <a class="btn btn-danger btn-sm" id="OPERATION_DELETE_%2" onclick="deleteOperation(%2); return false;" >DEL</a>
