for REST OPE_LIST

--- a/APPLI/PARTS_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -10,10 +10,10 @@
             <input type="text" name="PARTS_CATEGORY_NAME_%2" id="PARTS_CATEGORY_NAME_%2" value="%3" class="form-control" />
         </td>
         <td>
-            <a href="" class="btn btn-default" id="PARTS_CATEGORY_EDIT_%2" onclick="editPartsCategory(%2); return false;" >EDIT</a>
+            <a href="" class="btn btn-warning" id="PARTS_CATEGORY_EDIT_%2" onclick="editPartsCategory(%2); return false;" >EDIT</a>
         </td>
         <td>
-            <a class="btn btn-default" id="PARTS_CATEGORY_DELETE_%2" onclick="deletePartsCategory(%2);" >DELETE</a>
+            <a class="btn btn-danger" id="PARTS_CATEGORY_DELETE_%2" onclick="deletePartsCategory(%2);" >DELETE</a>
         </td>
     </tr>
 <!--RECORDS-->
