--- a/APPLI/STUFF/USERS/HTML/SHOW.HTML
+++ b/APPLI/STUFF/USERS/HTML/SHOW.HTML
@@ -34,6 +34,7 @@
                                 <th class="cpl-xs-2 col-md-3">FIRST NAME</th>
                                 <th class="cpl-xs-2 col-md-3">GIVEN NAME</th>
                                 <th class="cpl-xs-2 col-md-4">ID(e-mail)</th>
+                                <th class="cpl-xs-2 col-md-4">ADMIN</th>
                                 <th class="col-xs-2 col-md-2">EDIT</th>
                                 <th class="col-xs-2 col-md-2">DELETE</th>
                             </tr>
@@ -42,16 +43,17 @@
 <!--RECORDS-->
                             <tr>
                                 <td>
-                                    <a class="btn-link" href="%11">%2</a>
+                                    <a class="btn-link" href="%13">%2</a>
                                 </td>
                                 <td>%3</td>
                                 <td>%4</td>
                                 <td>%5</td>
+                                <td>%12</td>
                                 <td>
-                                    <a class="btn btn-default" href="%12">EDIT</a>
+                                    <a class="btn btn-default" href="%14">EDIT</a>
                                 </td>
                                 <td>
-                                    <a class="btn btn-default" href="%13">DELETE</a>
+                                    <a class="btn btn-default" href="%15">DELETE</a>
                                 </td>
                             </tr>
 <!--RECORDS-->
