--- a/APPLI/STUFF/NEW/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/NEW/HTML/COMPLETE.HTML
@@ -32,7 +32,6 @@
             <div class="col-md-1 col-xs-1"></div>
         </div>
 	    <br />
-
 	    <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -44,7 +43,6 @@
 	        </div>
         </div>
 	    <br />
-
 	    <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -53,6 +51,40 @@
             </div>
             <div class="col-md-10 col-xs-11">
 	            <span class="text-info h3">###EMAIL_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
+ 	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###TEL1_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
+ 	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###TEL2_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
+ 
+	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###ADMIN_LABEL###</span>
 	        </div>
         </div>
 	    <br />
