for REST & 更新者 削除フラグ

--- a/APPLI/STUFF/DELETE/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/DELETE/HTML/COMPLETE.HTML
@@ -27,12 +27,11 @@
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-                <span class="text-info h3">###ID_LABEL###</span>
+                <span class="text-info h3">###STUFF_ID_LABEL###</span>
             </div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
 	      <br />
-
 	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -45,7 +44,6 @@
             <div class="col-md-1 col-xs-1"></div>
         </div>
 	      <br />
- 
         <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -57,7 +55,6 @@
             </div>
         </div>
 	      <br />
-
         <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -68,6 +65,40 @@
 	              <span class="text-info h3">###EMAIL_LABEL###</span>
             </div>
         </div>
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###TEL1_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###TEL2_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###ADMIN_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+ 
     </div>
 </div>
 <!--</body>-->
