--- a/APPLI/STUFF/EDIT/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/EDIT/HTML/COMPLETE.HTML
@@ -3,8 +3,8 @@
 <!--<body>-->
 <div class="container">
     <div class="col-md-6 col-md-offset-1">
-
-        <!--Header Info-->
+       
+         <!--Header Info-->
         <div class="row">
             <div class="col-md-1 hidden-xs" >
                 <label class="control-label">
@@ -18,9 +18,8 @@
             </div>
         </div>
         <br>
-
-        <!--Contents-->
-	    <div class="row">
+         <!--Contents-->
+	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
                     <i class="glyphicon glyphicon-user"></i>
@@ -31,31 +30,63 @@
             </div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
-	    <br />
-
-	    <div class="row">
+	      <br />
+	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
                     <i class="glyphicon glyphicon-user"></i>
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
-
-	    <div class="row">
+	              <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
                     <i class="glyphicon glyphicon-envelope"></i>
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###EMAIL_LABEL###</span>
-	        </div>
+	              <span class="text-info h3">###EMAIL_LABEL###</span>
+	         </div>
         </div>
-	    <br />
+	      <br />
+ 	      <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###TEL1_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###TEL2_LABEL###</span>
+	          </div>
+        </div>
+	      <br />
+	      <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###ADMIN_LABEL###</span>
+	          </div>
+        </div>
+	      <br />
+
     </div>
 </div>
 <!--body-->
