--- a/APPLI/STUFF/DELETE/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/DELETE/HTML/CONFIRM.HTML
@@ -19,15 +19,12 @@
             </div>
         </div>
         <br>
-
+        
         <!--Contents-->
         <form action="/APP/STUFF/DELETE" method="POST">
             <input type="hidden" name="ACTION" value="COMPLETE" />
             <input type="hidden" name="REST" value="DELETE" />
-			      <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
-
-
-            <!---->
+			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -35,13 +32,12 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-                    <span class="text-info h3">###ID###</span>
+                    <span class="text-info h3">###STUFF_ID###</span>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
-	              <input type="hidden" name="ID" value="###ID###" />
+	              <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
             </div>
 	          <br />
-
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -49,13 +45,11 @@
                     </label>
                 </div>
                     <div class="col-md-10 col-xs-11">
-                        <span class="text-info h3">###FAMILY_NAME_###</span>
+                        <span class="text-info h3">###FAMILY_NAME###</span>
                     </div>
                 <div class="col-md-1 col-xs-1"></div>
-	              <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_###" />
             </div>
 	          <br />
- 
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -63,12 +57,10 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-	                  <span class="text-info h3">###GIVEN_NAME_###</span>
+	                  <span class="text-info h3">###GIVEN_NAME###</span>
                 </div>
-                <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_###" />
             </div>
 	          <br />
-
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -76,12 +68,43 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-	                  <span class="text-info h3">###EMAIL_###</span>
+	                  <span class="text-info h3">###EMAIL###</span>
                 </div>
-                <input type="hidden" name="EMAIL" value="###EMAIL_###" />
             </div>
 	          <br />
- 
+            <div class="row">
+                 <div class="col-md-1 hidden-xs">
+                     <label class="control-label">
+                         <i class="glyphicon glyphicon-envelope"></i>
+                     </label>
+                 </div>
+                 <div class="col-md-10 col-xs-11">
+	                   <span class="text-info h3">###TEL1###</span>
+                 </div>
+            </div>
+	          <br />
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###TEL2###</span>
+                </div>
+            </div>
+	          <br />
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                  <span class="text-info h3">###ADMIN###</span>
+                </div>
+            </div>
+	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                 </div>
