--- a/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
@@ -21,26 +21,24 @@
 
         <!--Contents-->
         <form action="/APP/STUFF/EDIT" method="POST">
-			    <input type="hidden" name="ACTION" value="COMPLETE" />
-			    <input type="hidden" name="REST" value="PUT" />
-			    <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
-			    <input type="hidden" name="ID" value="###ID###" />
-
+			      <input type="hidden" name="ACTION" value="COMPLETE" />
+			      <input type="hidden" name="REST" value="PUT" />
+			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
+			      <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
             <!---->
-	        <div class="row">
+	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
                         <i class="glyphicon glyphicon-user"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-                    <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                    <span class="text-info h3">###FAMILY_NAME###</span>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
-	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
+	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME###" />
             </div>
-	        <br />
-
+	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -48,12 +46,11 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-	                <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
+	                <span class="text-info h3">###GIVEN_NAME###</span>
                 </div>
-                <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
+                <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME###" />
             </div>
-	        <br />
-
+	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -61,12 +58,35 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-	                <span class="text-info h3">###EMAIL_LABEL###</span>
+	                <span class="text-info h3">###EMAIL###</span>
                 </div>
-                <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
+                <input type="hidden" name="EMAIL" value="###EMAIL###" />
             </div>
-	        <br />
-
+	          <br />
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###TEL1###</span>
+                </div>
+                <input type="hidden" name="TEL1" value="###TEL1###" />
+            </div>
+	          <br />
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###TEL2###</span>
+                </div>
+                <input type="hidden" name="TEL2" value="###TEL2###" />
+            </div>
+	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -74,12 +94,23 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-	                <span class="text-info h3">###PASSWORD_LABEL###</span>
+	                <span class="text-info h3">###PASSWORD###</span>
                 </div>
-                <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
+                <input type="hidden" name="PASSWORD" value="###PASSWORD_VAL###" />
             </div>
-	        <br />
-
+	          <br />
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###ADMIN###</span>
+                </div>
+                <input type="hidden" name="ADMIN_VAL" value="###ADMIN_VAL###" />
+            </div>
+	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                 </div>
@@ -91,7 +122,7 @@
                     </div>
                 </div>
             </div>
-	    </form>
+	      </form>
     </div>
 </div>
 <!--</body>-->
