--- a/APPLI/STUFF/EDIT/HTML/INPUT.HTML
+++ b/APPLI/STUFF/EDIT/HTML/INPUT.HTML
@@ -16,9 +16,10 @@
                 <span class="label label-danger ###GIVEN_NAME_ERR###">GIVEN NAME was Invalid.</span>
                 <span class="label label-danger ###EMAIL_ERR###">EMAIL was Invalid.</span>
                 <span class="label label-danger ###EMAIL_DUPLECATED###">Duplicated EMAIL.</span>
+                <span class="label label-danger ###TEL1_ERR###">Tel1 Invailed.</span>
+                <span class="label label-danger ###TEL2_ERR###">Tel2 Invalid.</span>
                 <span class="label label-danger ###PASSWORD_ERR###">PASSWORD was Invalid.</span>
                 <span class="label label-danger ###PASSWORD_CONFIRMATION_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
-                </span>
             </div>
         </div>
         <br> 
@@ -27,17 +28,17 @@
         <form action="/APP/STUFF/EDIT" method="POST">
 	    	    <input type="hidden" name="ACTION" value="CONFIRM" />
 	    	    <input type="hidden" name="REST" value="PUT" />
-	    	    <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+	    	    <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
             
             <div class="row">
                <div class="col-md-1 hidden-xs">
-                    <label class="control-label">
+                    <label class="control-label ###FAMILY_NAME_LBL_COLOR###">
                         <i class="glyphicon glyphicon-user" style=""></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-	                    <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" class="form-control" placeholder="Family Name" />
+	                    <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME###" class="form-control" placeholder="Family Name" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
@@ -46,13 +47,13 @@
 
             <div class="row">
                 <div class="col-md-1 hidden-xs">
-                    <label class="control-label">
+                    <label class="control-label ###GIVEN_NAME_LBL_COLOR###">
                         <i class="glyphicon glyphicon-user"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-	                    <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" class="form-control" placeholder="Given Name" />
+	                    <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME###" class="form-control" placeholder="Given Name" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
@@ -61,13 +62,43 @@
 
             <div class="row">
                 <div class="col-md-1 hidden-xs">
-                    <label class="control-label">
+                    <label class="control-label ###EMAIL_LBL_COLOR###">
                         <i class="glyphicon glyphicon-envelope"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-                        <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL_VALUE###" class="form-control" placeholder="ID (e-mail)" />
+                        <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL###" class="form-control" placeholder="ID (e-mail)" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label ###TEL1_LBL_COLOR###">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+                        <input type="text" name="TEL1" id="TEL1" value="###TEL1###" class="form-control" placeholder="mobile phone" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label ###TEL2_LBL_COLOR###">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+                        <input type="text" name="TEL2" id="TEL2" value="###TEL2###" class="form-control" placeholder="another phone" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
@@ -76,13 +107,13 @@
 
             <div class="row">
                 <div class="col-md-1 hidden-xs ">
-                    <label class="control-label">
+                    <label class="control-label ###PW_LBL_COLOR###">
                         <i class="glyphicon glyphicon-edit"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11 ">
                     <div class="form-group">
-                        <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" placeholder="Password" />
+                        <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD###" class="form-control" placeholder="Password" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
@@ -91,16 +122,31 @@
 
             <div class="row">
                 <div class="col-md-1 hidden-xs">
-                    <label class="control-label">
+                    <label class="control-label ###PW_CONF_LBL_COLOR###">
                         <i class="glyphicon glyphicon-thumbs-up"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-                        <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION_VALUE###" class="form-control" placeholder="Password Confirmation" />
+                        <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION###" class="form-control" placeholder="Password Confirmation" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                 <div class="col-md-1 hidden-xs">
+                     <label class="control-label">
+                         <i class="glyphicon glyphicon-envelope"></i>
+                     </label>
+                 </div>
+                 <div class="col-md-10 col-xs-11">
+                     <div class="form-group">
+                         <input type="checkbox" checked="###ADMIN_CHK###" name="ADMIN" id="ADMIN" value="###ADMIN_VAL###" class="form-control" placeholder="管理権限" />
+                     </div>
+                 </div>
+                 <div class="col-md-1 col-xs-1"></div>
             </div>
             <br> 
 
@@ -110,7 +156,7 @@
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-                            <span class="glyphicon glyphicon-eye-open"> Chek!!</span>
+                            <span class="glyphicon glyphicon-eye-open">CONFIRM</span>
                         </button>
                     </div>
                 </div>
@@ -119,5 +165,28 @@
 	    </form>
     </div>
 </div>
+
+<script>
+
+    //管理者フラグの設定(sedでのchecked変換でうまく動作しないための逃げ)
+    $(function() {
+      if ($('#ADMIN').val() == 1) {
+          $('#ADMIN').prop('checked',true);
+      } else {
+          $('#ADMIN').prop('checked',false);
+          $('#ADMIN').val(0);
+      }    
+    });
+
+    //ADMINフラグのcheckBox ON/OFF
+    $('#ADMIN').on('click', function() {
+      if ($(this).prop('checked')) {
+          $('#ADMIN').val(1);
+      } else {
+          $('#ADMIN').val(0);
+      }
+    });
+</script>
+
 <!--</body>-->
 <!--</html>-->
