--- a/APPLI/OPERATION_CATEGORY/LISTS/HTML/SHOW.HTML
+++ b/APPLI/OPERATION_CATEGORY/LISTS/HTML/SHOW.HTML
@@ -57,6 +57,7 @@
             } else {
                 $('table').html(data);
                 $('#info-msg').html(new_category_name + "を追加しました。");
+                alert(new_category_name + "を追加しました。");
             }
         });
         jqXHR.fail(function(data) {
@@ -120,6 +121,7 @@
                 alert('No:' + id + 'の'+ delete_category_name + "を削除しました。");
                 $('#info-msg').html('No:' + id + 'の' + delete_category_name + "を削除しました。");
             } else {
+                alert('No:' + id + 'の' +  delete_category_name + "を削除出来ませんでした。");
                 $('#info-msg').html('No:' + id + 'の' +  delete_category_name + "を削除出来ませんでした。");
             }
         });
