--- a/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
@@ -35,7 +35,7 @@
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="CATEGORY_NEW" id="CATEGORY_NEW" value="" class="form-control input-sm" disabled placeholder="部品カテゴリ"/>
+                            <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="部品カテゴリ"/>
                         </div>
                     </div>
                     <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" class="form-control" />
