--- a/APPLI/PARTS_CATEGORY/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_CATEGORY/LISTS/HTML/SHOW.HTML
@@ -86,8 +86,8 @@
             if (data == 2222) {
                 alert(edit_category_name + "は、既に使われています。");
             } else {
-                alert(edit_category_name + "を変更しました。");
-                $('#info-msg').html(edit_category_name + "を変更しました。");
+                alert('No:' + id + 'を'+ edit_category_name + "に変更しました。");
+                $('#info-msg').html('No:' + id + 'を'+ edit_category_name + "に変更しました。");
             }
         });
         jqXHR.fail(function() {
@@ -117,8 +117,10 @@
             if (data == 111) {
                 var sel = '#edit-row-' + id;
                 $(sel).remove();
+                alert('No:' + id + 'の'+ delete_category_name + "を削除しました。");
                 $('#info-msg').html(delete_category_name + "を削除しました。");
             } else {
+                alert('No:' + id + 'の' +  delete_category_name + "を削除出来ませんでした。");
                 $('#info-msg').html(delete_category_name + "を削除出来ませんでした。");
             }
         });
