--- a/APPLI/STUFF/EDIT/HTML/INPUT.HTML
+++ b/APPLI/STUFF/EDIT/HTML/INPUT.HTML
@@ -19,7 +19,7 @@
                 <span class="label label-danger ###TEL1_ERR###">Tel1 Invailed.</span>
                 <span class="label label-danger ###TEL2_ERR###">Tel2 Invalid.</span>
                 <span class="label label-danger ###PASSWORD_ERR###">PASSWORD was Invalid.</span>
-                <span class="label label-danger ###PASSWORD_CONFIRMATION_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
+                <span class="label label-danger ###PW_CONFIRM_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
             </div>
         </div>
         <br> 
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-                        <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION###" class="form-control" placeholder="Password Confirmation" />
+                        <input type="password" name="PW_CONFIRM" id="PW_CONFIRM" value="###PW_CONFIRM###" class="form-control" placeholder="Password Confirmation" />
                     </div>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
